--- a/root/frontend/signup.html
+++ b/root/frontend/signup.html
@@ -12,7 +12,7 @@
                 <img src="" alt="Sign up background image">
             </div>
             <div class="signup-form">
-                <h4>Welcome to ShineTrack</h4>
+                <h4>Welcome to <span><a href="index.html">ShineTrack</a></span></h4>
                 <p>Fill in the information below to register</p>
                 <form action="" method="post">
                     <div class="user-info">
