--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
+    <meta name="viewport" content="width=device-width
     , initial-scale=1.0">
     <title>ShineTrack</title>
+    <link rel="stylesheet" href="assets/styles/home.css">
 </head>
 <body>
     <div class="container" id="home">
