Changed the hero section content

--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -9,24 +9,30 @@
 </head>
 <body>
     <div class="container" id="home">
-        <section class="hero-section">
-            <div class="nav-bar">
-                <div class="logo"></div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#cta">Contact</a></li>
-                        <li><a href="/root/frontend/signup.html">Sign Up</a></li>
-                        <li><a href="/root/frontend/login.html">Login</a></li>
-                    </ul>
-                </div>
+        <div class="nav-bar">
+            <div class="logo"></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#cta">Contact</a></li>
+                    <li><a href="/root/frontend/signup.html">Sign Up</a></li>
+                    <li><a href="/root/frontend/login.html">Login</a></li>
+                </ul>
             </div>
+        </div>
+        <section class="hero-section">
             <div class="hero-header">
-                <div class="hero-title"></div>
-                <p class="hero-text"></p>
-                <button class="hero-button">Get Started</button>
+                <div class="hero-text">
+                    <p>Hello There!</p>
+                    <h1>Optimize your carwash services with <span>ShineTrack</span></h1>
+                    <p>Manage your car wash operations seamlessly with ShineTrack</p>
+                    <button class="hero-button">Get Started</button>
+                </div>
+                <div class="hero-image">
+                    <img src="./assets/images/hero-image.png" alt="Hero image">
+                </div>
             </div>
         </section>
         <section class="about" id="about">
