--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -39,33 +39,35 @@
             <h2>About us</h2>
             <p class="about-text">areoipkefoihnv</p>
         </section>
-        <section class="features" id="features">
+        <section class="features-section" id="features">
             <h2>Features</h2>
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="" alt="Feature icon">
+            <div class="features">
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                    </div>
+                    <div class="feature-text">
+                        <h4 class="feature-title">Feature 1</h4>
+                        <p>About this feature</p>
+                    </div>
                 </div>
-                <div class="feature-text">
-                    <h4 class="feature-title">Feature 1</h4>
-                    <p>About this feature</p>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                    </div>
+                    <div class="feature-text">
+                        <h4 class="feature-title">Feature 2</h4>
+                        <p>About this feature</p>
+                    </div>
                 </div>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="" alt="Feature icon">
-                </div>
-                <div class="feature-text">
-                    <h4 class="feature-title">Feature 2</h4>
-                    <p>About this feature</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="" alt="Feature icon">
-                </div>
-                <div class="feature-text">
-                    <h4 class="feature-title">Feature 3</h4>
-                    <p>About this feature</p>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                    </div>
+                    <div class="feature-text">
+                        <h4 class="feature-title">Feature 3</h4>
+                        <p>About this feature</p>
+                    </div>
                 </div>
             </div>
         </section>
