Added input labels and a footer divider

--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -72,19 +72,28 @@
             </div>
         </section>
         <section class="cta" id="cta">
+            <h2>Get in touch with us</h2>
             <form action="">
                 <div class="user-info">
-                    <input type="text" name="firstname" placeholder="First Name:">
-                    <input type="text" name="lastname" placeholder="Last Name:">
+                    <div>
+                    <p class="field-label">First Name:</p>
+                    <input type="text" name="firstname">
+                    </div>
+                    <div>
+                        <p class="field-label">Last Name:</p>
+                        <input type="text" name="lastname">
+                    </div>
                 </div>
-                <input type="text" name="subject" placeholder="Subject">
-                <input type="text" name="message" placeholder="Message">
-                <input type="button" value="Submit">
+                <p class="field-label">Subject:</p>
+                <input type="text" name="subject">
+                <p class="field-label">Message:</p>
+                <input type="text" name="message">
+                <button class="cta-button">Submit</button>
             </form>
         </section>
+        <div class="divider"></div>
         <footer>
-            <p>Designed and developed by Pauline Maina.</p>
-            <p>Copyright @ 2024</p>
+            <p>Designed and developed by <span><a href="https://github.com/PaulaMaina/ShineTrack">Pauline Maina</a></span>. Copyright @ 2024</p>
         </footer>
     </div>
 </body>
