Added styling to the signup and login pages

--- a/root/frontend/dashboard.html
+++ b/root/frontend/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShineTrack</title>
+    <link rel="stylesheet" href="./assets/styles/common.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,9 @@
                     <input type="button" value="Search">
                 </form>
             </div>
-            <div class="profile"></div>
+            <div class="profile">
+                <img src="./assets/images/default-profile.jpg" alt="Profile image">
+            </div>
         </div>
         <div class="sidebar">
             <ul>
