--- a/root/frontend/dashboard.html
+++ b/root/frontend/dashboard.html
@@ -9,11 +9,13 @@
 <body>
     <div class="container">
         <div class="nav-bar">
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="./assets/images/hero-image.png" alt="Logo">
+            </div>
             <div class="search">
                 <form action="" method="get">
-                    <input type="text">
-                    <input type="button" value="Search">
+                    <input type="text" name="search">
+                    <button class="search-button">Search</button>
                 </form>
             </div>
             <div class="profile">
@@ -22,7 +24,7 @@
         </div>
         <div class="sidebar">
             <ul>
-                <div class="selected">
+                <div class="sidemenu-item selected">
                     <img src="" alt="Dashboard icon">
                     <li><a href="dashboard.html">Dashboard</a></li>
                 </div>
