--- a/root/frontend/dashboard.html
+++ b/root/frontend/dashboard.html
@@ -25,27 +25,27 @@
         <div class="sidebar">
             <ul>
                 <div class="sidemenu-item selected">
-                    <img src="" alt="Dashboard icon">
+                    <img src="./assets/images/dashboard-icon.png" alt="Dashboard icon">
                     <li><a href="dashboard.html">Dashboard</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="" alt="Business icon">
+                    <img src="./assets/images/business-icon.png" alt="Business icon">
                     <li><a href="business.html">Car Washes</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="" alt="People icon">
+                    <img src="./assets/images/staff-icon.png" alt="People icon">
                     <li><a href="customers.html">Customers</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="" alt="Transaction icon">
+                    <img src="./assets/images/inventory-icon.png" alt="Transaction icon">
                     <li><a href="transactions.html">Transactions</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="" alt="Staff icon">
+                    <img src="./assets/images/department-icon.png" alt="Staff icon">
                     <li><a href="staff.html">Staff</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="" alt="Money icon">
+                    <img src="./assets/images/transaction-icon.png" alt="Money icon">
                     <li><a href="expenses.html">Expenses</a></li>
                 </div>
             </ul>
