--- a/root/frontend/business.html
+++ b/root/frontend/business.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
-                <img src="./assets/images/hero-image.png" alt="Logo">
+                <a href="index.html"><img src="./assets/images/hero-image.png" alt="Logo"></a>
             </div>
             <div class="search">
                 <form action="" method="get">
