Added a backdrop to the about section

--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -36,8 +36,10 @@
             </div>
         </section>
         <section class="about" id="about">
-            <h2>About us</h2>
-            <p class="about-text">areoipkefoihnv</p>
+            <div class="about-info">
+                <h2>About us</h2>
+                <p class="about-text">areoipkefoihnv iiherfiheierf eirhfihr fidhfikjeroihh eiohtrhioq 4qi8qeijh4rfiooh fi4jojri fpojgtr0if0nf fop1eejrij reopkrqe023</p>
+            </div>
         </section>
         <section class="features-section" id="features">
             <h2>Features</h2>
