Added an id to the sign up form

--- a/root/frontend/signup.html
+++ b/root/frontend/signup.html
@@ -15,7 +15,7 @@
             <div class="auth-form">
                 <h2>Welcome to <span><a href="index.html">ShineTrack</a></span></h2>
                 <p class="description">Fill in the information below to register</p>
-                <form action="" method="post">
+                <form action="" method="post" id="user-signup">
                     <div class="username">
                         <div class="user-info">
                             <p class="label">First Name:</p>
