Added the form JS scripts to the respective html files

--- a/root/frontend/business.html
+++ b/root/frontend/business.html
@@ -104,5 +104,6 @@
     </div>
     <div id="register-message"></div>
     <script src="./assets/scripts/script.js"></script>
+    <script src="./assets/scripts/businessRegistration.js"></script>
 </body>
 </html>
