--- a/root/frontend/signup.html
+++ b/root/frontend/signup.html
@@ -46,5 +46,6 @@
         </div>
     </div>
     <script src="./assets/scripts/userRegistration.js"></script>
+    <script src="./assets/scripts/userRegistration.js"></script>
 </body>
 </html>
