Changed the hyperlinks in the HTML files to match the file structure

--- a/root/public/business.html
+++ b/root/public/business.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShineTrack</title>
-    <link rel="stylesheet" href="./assets/styles/common.css">
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
-                <a href="index.html"><img src="./assets/images/hero-image.png" alt="Logo"></a>
+                <a href="/"><img src="/images/hero-image.png" alt="Logo"></a>
             </div>
             <div class="search">
                 <form action="" method="get">
@@ -20,34 +20,34 @@
                 </form>
             </div>
             <div class="profile">
-                <img src="./assets/images/default-profile.jpg" alt="Profile image">
+                <img src="/images/default-profile.jpg" alt="Profile image">
             </div>
         </div>
         <div class="sidebar">
             <ul>
                 <div class="sidemenu-item">
-                    <img src="./assets/images/dashboard-icon.png" alt="Dashboard icon">
-                    <li><a href="dashboard.html">Dashboard</a></li>
+                    <img src="/images/dashboard-icon.png" alt="Dashboard icon">
+                    <li><a href="/dashboard">Dashboard</a></li>
                 </div>
                 <div class="sidemenu-item selected">
-                    <img src="./assets/images/business-icon.png" alt="Business icon">
-                    <li><a href="business.html">Car Washes</a></li>
+                    <img src="/images/business-icon.png" alt="Business icon">
+                    <li><a href="/businesses">Car Washes</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="./assets/images/staff-icon.png" alt="People icon">
-                    <li><a href="customers.html">Customers</a></li>
+                    <img src="/images/staff-icon.png" alt="People icon">
+                    <li><a href="/customers">Customers</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="./assets/images/inventory-icon.png" alt="Transaction icon">
-                    <li><a href="transactions.html">Transactions</a></li>
+                    <img src="/images/inventory-icon.png" alt="Transaction icon">
+                    <li><a href="/transactions">Transactions</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="./assets/images/department-icon.png" alt="Staff icon">
-                    <li><a href="staff.html">Staff</a></li>
+                    <img src="/images/department-icon.png" alt="Staff icon">
+                    <li><a href="/employees">Staff</a></li>
                 </div>
                 <div class="sidemenu-item">
-                    <img src="./assets/images/transaction-icon.png" alt="Money icon">
-                    <li><a href="expenses.html">Expenses</a></li>
+                    <img src="/images/transaction-icon.png" alt="Money icon">
+                    <li><a href="/expenses">Expenses</a></li>
                 </div>
             </ul>
         </div>
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div id="register-message"></div>
-    <script src="./assets/scripts/script.js"></script>
-    <script src="./assets/scripts/businessRegistration.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/businessRegistration.js"></script>
 </body>
 </html>
