--- a/root/public/index.html
+++ b/root/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShineTrack</title>
-    <link rel="stylesheet" href="assets/styles/home.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
     <div class="container" id="home">
@@ -17,8 +16,8 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#cta">Contact</a></li>
-                    <li><a href="/root/frontend/signup.html">Sign Up</a></li>
-                    <li><a href="/root/frontend/login.html">Login</a></li>
+                    <li><a href="/register">Sign Up</a></li>
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +30,7 @@
                     <button class="hero-button">Get Started</button>
                 </div>
                 <div class="hero-image">
-                    <img src="./assets/images/hero-image.png" alt="Hero image">
+                    <img src="/images/hero-image.png" alt="Hero image">
                 </div>
             </div>
         </section>
@@ -46,7 +45,7 @@
             <div class="features">
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/feature.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
                         <h4 class="feature-title">Feature 1</h4>
@@ -55,7 +54,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/feature.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
                         <h4 class="feature-title">Feature 2</h4>
@@ -64,7 +63,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="./assets/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/feature.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
                         <h4 class="feature-title">Feature 3</h4>
