--- a/root/public/login.html
+++ b/root/public/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShineTrack</title>
-    <link rel="stylesheet" href="./assets/styles/auth.css">
+    <link rel="stylesheet" href="/css/auth.css">
 </head>
 <body>
     <div class="container">
         <div class="auth">
             <div class="auth-image">
-                <img src="./assets/images/hero-image.jpg" alt="Sign in background image">
+                <img src="/images/hero-image.jpg" alt="Sign in background image">
             </div>
             <div class="auth-form login">
-                <h2>Welcome back to <span><a href="index.html">ShineTrack</a></span></h2>
+                <h2>Welcome back to <span><a href="/">ShineTrack</a></span></h2>
                 <p class="description">Fill in the information below to log into your account</p>
                 <form action="" method="post" id="user-login">
                     <p class="label">Phone Number:</p>
@@ -26,11 +26,11 @@
                 </form>
                 <div id="login-message"></div>
                 <div class="redirect">
-                    <p>Don't have an account? <span><a href="login.html">Sign up</a></span> for an account today!</p>
+                    <p>Don't have an account? <span><a href="/register">Sign up</a></span> for an account today!</p>
                 </div>
             </div>
         </div>
     </div>
-    <script src="./assets/scripts/userLogin.js"></script>
+    <script src="/js/userLogin.js"></script>
 </body>
 </html>
