--- a/root/public/signup.html
+++ b/root/public/signup.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShineTrack</title>
-    <link rel="stylesheet" href="./assets/styles/auth.css">
+    <link rel="stylesheet" href="/css/auth.css">
 </head>
 <body>
     <div class="container">
         <div class="auth">
             <div class="auth-image">
-                <img src="./assets/images/hero-image.jpg" alt="Sign up background image">
+                <img src="/images/hero-image.jpg" alt="Sign up background image">
             </div>
             <div class="auth-form">
-                <h2>Welcome to <span><a href="index.html">ShineTrack</a></span></h2>
+                <h2>Welcome to <span><a href="/">ShineTrack</a></span></h2>
                 <p class="description">Fill in the information below to register</p>
                 <form action="" method="post" id="user-signup">
                     <div class="username">
@@ -45,7 +45,6 @@
             </div>
         </div>
     </div>
-    <script src="./assets/scripts/userRegistration.js"></script>
-    <script src="./assets/scripts/userRegistration.js"></script>
+    <script src="/js/userRegistration.js"></script>
 </body>
 </html>
