Changed hyperlink routing and edited the imports of index.js

--- a/root/public/login.html
+++ b/root/public/login.html
@@ -21,7 +21,7 @@
                     <p class="label">Enter Password:</p>
                     <input type="text" id="pwd" name="password" required>
                     <div class="login-button">
-                        <button class="auth-button">Sign In</button>
+                        <button class="auth-button" type="submit">Sign In</button>
                     </div>
                 </form>
                 <div id="login-message"></div>
