--- a/root/public/signup.html
+++ b/root/public/signup.html
@@ -35,12 +35,12 @@
                     <p class="label">Confirm Password:</p>
                     <input type="text" id="confirm-pwd" required>
                     <div class="signup-button">
-                        <button class="auth-button">Sign up</button>
+                        <button class="auth-button" type="submit">Sign up</button>
                     </div>
                 </form>
                 <div id="signup-message"></div>
                 <div class="redirect">
-                    <p>Already have an account? <span><a href="login.html">Sign In</a></span></p>
+                    <p>Already have an account? <span><a href="/login">Sign In</a></span></p>
                 </div>
             </div>
         </div>
