Added an id to the input for posting form data

--- a/root/public/business.html
+++ b/root/public/business.html
@@ -82,19 +82,19 @@
                     <div class="content">
                         <h2>Register your carwash business today!</h2>
                         <p>Fill in the information below:</p>
-                        <form action="/business" method="POST">
+                        <form action="" method="POST">
                             <p class="input-fields">Business Name*</p>
-                            <input type="text" name="bizname" required>
+                            <input type="text" id="bizname" required>
                             <p class="input-fields">Business Address*</p>
-                            <input type="text" name="bizLocation" required>
+                            <input type="text" id="bizLocation" required>
                             <p class="input-fields">Business Tel. Number*</p>
-                            <input type="number" name="telNumber" required>
+                            <input type="number" id="telNumber" required>
                             <p class="input-fields">Opening Hours</p>
-                            <input type="text" name="openingHours">
+                            <input type="text" id="openingHours">
                             <p class="input-fields">Closing Hours</p>
-                            <input type="text" name="closingHours">
+                            <input type="text" id="closingHours">
                             <p class="input-fields">Business Description</p>
-                            <input type="text" name="bizDescription">
+                            <input type="text" id="bizDescription">
                             <button type="submit" onclick="bizRegistered()">Register</button>
                         </form>
                     </div>
