--- a/root/public/login.html
+++ b/root/public/login.html
@@ -17,9 +17,9 @@
                 <p class="description">Fill in the information below to log into your account</p>
                 <form action="" method="post" id="user-login">
                     <p class="label">Phone Number:</p>
-                    <input type="text" name="phonenumber" required>
+                    <input type="text" id="phonenumber" required>
                     <p class="label">Enter Password:</p>
-                    <input type="text" id="pwd" name="password" required>
+                    <input type="text" id="password" required>
                     <div class="login-button">
                         <button class="auth-button" type="submit">Sign In</button>
                     </div>
