--- a/root/public/signup.html
+++ b/root/public/signup.html
@@ -19,19 +19,19 @@
                     <div class="username">
                         <div class="user-info">
                             <p class="label">First Name:</p>
-                            <input type="text" name="firstname" required>
+                            <input type="text" id="firstname" required>
                         </div>
                         <div class="user-info">
                             <p class="label">Last Name:</p>
-                            <input type="text" name="lastname" required>
+                            <input type="text" id="lastname" required>
                         </div>
                     </div>
                     <p class="label">Phone Number:</p>
-                    <input type="text" name="phonenumber" required>
+                    <input type="text" id="phonenumber" required>
                     <p class="label">Email Address:</p>
-                    <input type="text" name="email">
+                    <input type="text" id="email">
                     <p class="label">Enter Password:</p>
-                    <input type="text" id="pwd" name="password" required>
+                    <input type="text" id="password" required>
                     <p class="label">Confirm Password:</p>
                     <input type="text" id="confirm-pwd" required>
                     <div class="signup-button">
