Added an id to the business registration form

--- a/root/public/business.html
+++ b/root/public/business.html
@@ -82,7 +82,7 @@
                     <div class="content">
                         <h2>Register your carwash business today!</h2>
                         <p>Fill in the information below:</p>
-                        <form action="" method="POST">
+                        <form action="" method="POST" id="biz-register">
                             <p class="input-fields">Business Name*</p>
                             <input type="text" id="bizname" required>
                             <p class="input-fields">Business Address*</p>
