--- a/root/public/business.html
+++ b/root/public/business.html
@@ -54,25 +54,24 @@
         <div class="dashboard">
             <h1>Car Wash Businesses</h1>
             <div id="entries">
-                <table>
-                    <tr>
-                        <th>No.</th>
-                        <th>Business Name</th>
-                        <th>Location</th>
-                        <th>Telephone Number</th>
-                        <th>Opening Hours</th>
-                        <th>Closing Hours</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Classic Car Wash</td>
-                        <td>Nairobi, Kenya</td>
-                        <td>+254712345678</td>
-                        <td>8:00 am</td>
-                        <td>11:00 pm</td>
-                    </tr>
+                <table id="mybusinesses">
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>Business Name</th>
+                            <th>Location</th>
+                            <th>Telephone Number</th>
+                            <th>Opening Hours</th>
+                            <th>Closing Hours</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Rows will be added dynamically from the database-->
+                    </tbody>
                 </table>
             </div>
+            <div id="message"></div>
             <div class="add-new">
                 <button onclick="openPopup()"><i class="fa fa-plus"></i></button>
             </div>
@@ -103,6 +102,7 @@
         </div>
     </div>
     <div id="register-message"></div>
+    <script src="/js/getBusinesses.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/businessRegistration.js"></script>
 </body>
