Corrected the business functions script source

--- a/root/public/business.html
+++ b/root/public/business.html
@@ -102,8 +102,7 @@
         </div>
     </div>
     <div id="register-message"></div>
-    <script src="/js/getBusinesses.js"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/businessRegistration.js"></script>
+    <script src="/js/businessFunc.js"></script>
 </body>
 </html>
