--- a/root/public/business.html
+++ b/root/public/business.html
@@ -50,6 +50,9 @@
                     <li><a href="/expenses">Expenses</a></li>
                 </div>
             </ul>
+            <div class="logout">
+                <button onclick="logout()">Logout</button>
+            </div>
         </div>
         <div class="dashboard">
             <h1>Car Wash Businesses</h1>
@@ -104,5 +107,6 @@
     <div id="register-message"></div>
     <script src="/js/script.js"></script>
     <script src="/js/businessFunc.js"></script>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
