--- a/root/public/dashboard.html
+++ b/root/public/dashboard.html
@@ -50,6 +50,9 @@
                     <li><a href="/expenses">Expenses</a></li>
                 </div>
             </ul>
+            <div class="logout">
+                <button onclick="logout()">Logout</button>
+            </div>
         </div>
         <div class="dashboard">
             <h1>Dashboard</h1>
@@ -106,5 +109,6 @@
             </div>
         </div>
     </div>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
