--- a/root/public/signup.html
+++ b/root/public/signup.html
@@ -15,7 +15,8 @@
             <div class="auth-form">
                 <h2>Welcome to <span><a href="/">ShineTrack</a></span></h2>
                 <p class="description">Fill in the information below to register</p>
-                <form action="" method="post" id="user-signup">
+                <div id="message"></div>
+                <form method="post" id="user-signup">
                     <div class="username">
                         <div class="user-info">
                             <p class="label">First Name:</p>
@@ -38,7 +39,6 @@
                         <button class="auth-button" type="submit">Sign up</button>
                     </div>
                 </form>
-                <div id="signup-message"></div>
                 <div class="redirect">
                     <p>Already have an account? <span><a href="/login">Sign In</a></span></p>
                 </div>
