Renamed logout script to add other common functions

--- a/root/public/business.html
+++ b/root/public/business.html
@@ -107,6 +107,6 @@
     <div id="register-message"></div>
     <script src="/js/script.js"></script>
     <script src="/js/businessFunc.js"></script>
-    <script src="/js/logout.js"></script>
+    <script src="/js/commonFunc.js"></script>
 </body>
 </html>
