--- a/root/public/dashboard.html
+++ b/root/public/dashboard.html
@@ -109,6 +109,6 @@
             </div>
         </div>
     </div>
-    <script src="/js/logout.js"></script>
+    <script src="/js/commonFunc.js"></script>
 </body>
 </html>
