--- a/root/public/signup.html
+++ b/root/public/signup.html
@@ -32,9 +32,12 @@
                     <p class="label">Email Address:</p>
                     <input type="text" id="email">
                     <p class="label">Enter Password:</p>
-                    <input type="text" id="password" required>
+                    <input type="password" id="password" required>
                     <p class="label">Confirm Password:</p>
-                    <input type="text" id="confirm-pwd" required>
+                    <input type="password" id="confirmpwd" required>
+                    <div class="pwd">
+                        <input type="checkbox" onclick="showPassword()"><p class="label">Show Password</p>
+                    </div>
                     <div class="signup-button">
                         <button class="auth-button" type="submit">Sign up</button>
                     </div>
@@ -46,5 +49,6 @@
         </div>
     </div>
     <script src="/js/userRegistration.js"></script>
+    <script src="/js/commonFunc.js"></script>
 </body>
 </html>
