--- a/root/public/business.html
+++ b/root/public/business.html
@@ -67,6 +67,7 @@
                             <th>Opening Hours</th>
                             <th>Closing Hours</th>
                             <th>Description</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -74,7 +75,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="message"></div>
+            <div id="outputMessage"></div>
             <div class="add-new">
                 <button onclick="openPopup()"><i class="fa fa-plus"></i></button>
             </div>
@@ -104,7 +105,6 @@
             </div>
         </div>
     </div>
-    <div id="register-message"></div>
     <script src="/js/script.js"></script>
     <script src="/js/businessFunc.js"></script>
     <script src="/js/commonFunc.js"></script>
