--- a/root/public/transactions.html
+++ b/root/public/transactions.html
@@ -29,7 +29,7 @@
                     <img src="/images/dashboard-icon.png" alt="Dashboard icon">
                     <li><a href="/dashboard">Dashboard</a></li>
                 </div>
-                <div class="sidemenu-item selected">
+                <div class="sidemenu-item">
                     <img src="/images/business-icon.png" alt="Business icon">
                     <li><a href="/businesses">Car Washes</a></li>
                 </div>
@@ -37,7 +37,7 @@
                     <img src="/images/staff-icon.png" alt="People icon">
                     <li><a href="/customers">Customers</a></li>
                 </div>
-                <div class="sidemenu-item">
+                <div class="sidemenu-item selected">
                     <img src="/images/inventory-icon.png" alt="Transaction icon">
                     <li><a href="/transactions">Transactions</a></li>
                 </div>
@@ -91,21 +91,29 @@
                             <p class="input-fields">Number Plate*</p>
                             <input type="text" id="numberPlate" required>
                             <p class="input-fields">Service*</p>
-                            <input type="text" id="service" required>
+                            <select id="service" required>
+                                <option value="Default">Select</option>
+                                <option value="Dusting">Dusting</option>
+                                <option value="Wash">Wash</option>
+                                <option value="Waxing">Waxing</option>
+                            </select>
                             <p class="input-fields">Total Cost*</p>
                             <input type="number" id="totalAmount" required>
+                            <p class="input-fields">Payment Status*</p>
                             <select id="payment-dropdown">
-                                <option value="Not Paid">Select a Payment Status:</option>
+                                <option value="Not Paid">Select</option>
                                 <option value="Pending">Pending</option>
                                 <option value="Paid">Paid</option>
                             </select>
+                            <p class="input-fields">Has the car been picked up?</p>
                             <select id="pickup-dropdown">
-                                <option value="Unknown">Has the car been picked up?</option>
+                                <option value="Unknown">Select</option>
                                 <option value="Pending">Yes</option>
                                 <option value="Done">No</option>
                             </select>
+                            <p class="input-fields">Select the attendant:</p>
                             <select id="employee-dropdown">
-                                <option value="Unknown">Select the attendant:</option>
+                                <option value="Unknown">Select</option>
                             </select>
                             <button type="submit" onclick="bizRegistered()">Create</button>
                         </form>
